# loong-memory

./: Cargo.toml  LICENSE  README.md  SECURITY.md
crates/loong-memory-cli/: Cargo.toml
crates/loong-memory-cli/src/: main.rs
crates/loong-memory-cli/tests/: cli_policy_integration.rs
crates/loong-memory-core/: Cargo.toml
crates/loong-memory-core/src/: audit.rs  embed.rs  engine.rs  error.rs  lib.rs  model.rs  policy.rs  store.rs  tokenize.rs
crates/loong-memory-core/tests/: audit_sqlite_integration.rs  engine_store_integration.rs  policy_static_tests.rs  sqlite_store_migration_integration.rs  vector_health_integration.rs  vector_repair_integration.rs
crates/loong-memoryd/: Cargo.toml
crates/loong-memoryd/src/: lib.rs  main.rs
crates/loong-memoryd/tests/: auth_config_integration.rs  http_service_integration.rs
docs/: architecture.md  roadmap.md
docs/examples/: static-auth.example.json  static-policy.example.json
docs/plans/: 2026-03-08-loong-memory-design.md  2026-03-14-cli-policy-control-plane-design.md  2026-03-14-cli-policy-control-plane.md  2026-03-15-loong-memoryd-auth-envelope-design.md  2026-03-15-loong-memoryd-auth-envelope.md  2026-03-15-loong-memoryd-http-design.md  2026-03-15-loong-memoryd-http.md  2026-03-15-loong-memoryd-transport-hardening-design.md  2026-03-15-loong-memoryd-transport-hardening.md
docs/research/: onecontext-reverse-engineering.md  phase1-evaluation-2026-03-08.md  phase1-evaluation-round2-2026-03-08.md  phase1-evaluation-round3-2026-03-08.md  phase1-evaluation-round4-2026-03-08.md  phase1-evaluation-round5-2026-03-08.md  phase1-evaluation-round6-2026-03-08.md  phase1-evaluation-round7-2026-03-08.md  phase1-evaluation-round8-2026-03-09.md  phase1-evaluation-round9-2026-03-14.md  phase2-service-evaluation-2026-03-15.md
