[workspace]
members = [
  "crates/loong-memory-core",
  "crates/loong-memory-cli",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
authors = ["chumyin"]
repository = "https://github.com/chumyin/loong-memory"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
sha2 = "0.10"
hex = "0.4"
rusqlite = { version = "0.32", features = ["bundled", "chrono", "functions"] }
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
tempfile = "3"
approx = "0.5"
